Update app branding and metadata

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Add viewport meta tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#2196f3" />
+    <meta name="description" content="Provider Compensation Forecaster - Calculate and analyze provider compensation based on wRVUs" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Provider Compensation Forecaster</title>
   </head>
   <body>
