Fix asset paths for GitHub Pages deployment

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/wrvu-analysis-tool/logo192.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/wrvu-analysis-tool/logo192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/wrvu-analysis-tool/logo192.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/wrvu-analysis-tool/logo192.png" />
-    <link rel="apple-touch-icon" href="/wrvu-analysis-tool/logo192.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Add viewport meta tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2196f3" />
     <meta name="description" content="Provider Compensation Forecaster - Calculate and analyze provider compensation based on wRVUs" />
-    <link rel="manifest" href="/wrvu-analysis-tool/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Provider Compensation Forecaster</title>
   </head>
   <body>
